feat : bucket에서 삭제기능 추가